# refsolver-for-aws-sam-cli

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  WORK.md  pyproject.toml
.devcontainer/: devcontainer.json  initialize  initialize.cmd
src/aws_sam_cli_refsolver/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_hello.py
tests/example/: app.py
tests/example/example/: example_stack.py
tests/example/example-container/: Dockerfile  app.py
tests/example/lambda/: index.py
