[project]
name = "aws-sam-cli-refsolver"
version = "0.1.0"
description = "Resolving CloudFormation Refs for AWS SAM CLI."
authors = [
    {name = "Nick Darvey",email = "nick@nickdarvey.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry.group.dev.dependencies]
ruff = ">=0.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-select]
# Explicitly choose D211 (no-blank-line-before-class) over D203
"D211" = true
# Explicitly choose D212 (multi-line-summary-first-line) over D213
"D212" = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
