[project]
name = "aws-sam-cli-refsolver"
version = "0.1.0"
description = "Resolving CloudFormation Refs for AWS SAM CLI."
authors = [
    {name = "Nick Darvey",email = "nick@nickdarvey.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry.group.dev.dependencies]
ruff = ">=0.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
