[project]
name = "aws-sam-cli-refsolver"
version = "0.1.0"
description = "Resolving CloudFormation Refs for AWS SAM CLI."
authors = [
    {name = "Nick Darvey",email = "nick@nickdarvey.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "boto3 (>=1.36.21,<2.0.0)",
    "boto3-stubs-lite (>=1.36.21,<2.0.0)",
    "mypy-boto3-cloudformation (>=1.36.15,<2.0.0)",
    "aws-cdk-lib (>=2.178.2,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
